# Sound_Recognition_Challenge

./: SoundRules.txt  autoload2012.rtf
Code/: SoundInit.py  autoload.ini  autoload2.ini  sound.cfg
Code/Challenge/.qi/: worktree.xml
Code/Challenge/v1/soundprocess/: alsoundprocessing.cpp  alsoundprocessing.h  main.cpp  qiproject.xml
Code/Challenge/v1/soundprocess/build-naoqi-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake  soundprocessing.cbp
Code/Challenge/v1/soundprocesslocal/: CMakeLists.txt  CMakeLists.txt~  alsoundprocessing.cpp  alsoundprocessing.h  alsoundprocessing.h~  main.cpp  qiproject.xml
Code/Challenge/v1/soundprocesslocal/build-naoqi-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake
Code/Challenge/v2/soundprocesslocal/: alsoundprocessing.h~
Code/Challenge/v2/soundprocesslocal/build-naoqi-sdk/: cmake_install.cmake
Code/Challenge/v3/soundprocesslocal/: alsoundprocessing.cpp  alsoundprocessing.h
Code/Challenge/vf/soundprocesslocal/: CMakeLists.txt  alsoundprocessing.cpp
Code/Challenge/vf/soundprocesslocal/build-naoqi-sdk/: CMakeCache.txt  Makefile
